[package]
name = "os"
version = "0.1.0"
authors = ["flekystyley <flekystyley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.3.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"